10067 is overflow memory...